--- a/ML Strategy (1).ipynb
+++ b/ML Strategy (1).ipynb
@@ -19,6 +19,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 正交化\n",
+    "\n",
+    "正交化是一种系统设计的特性，它可以保证算法的一个指令或组件，不会对系统的其它组件产生副作用。这个特性使得验证算法的工具各自独立，从而减轻测试和开发周期。\n",
+    "\n",
+    "在设计监督学习系统时，下面是4个假设，我们需要这些假设都成立，并且相互正交：\n",
+    "\n",
+    "1. 成本函数在训练集上表现良好\n",
+    "    - 如果不好，使用更大的神经网络，或者使用更好的优化算法\n",
+    "2. 成本函数在开发集上表现良好\n",
+    "    - 如果不好，使用正则化，或者使用更大的训练集\n",
+    "3. 成本函数在测试集上表现良好\n",
+    "    - 如果不好，使用更大的开发集\n",
+    "4. 模型在现实世界里表现良好\n",
+    "    - 如果不好，开发集可能设置错误，或者所选的成本函数不是衡量所给问题好坏的一个很好指标\n",
+    "\n",
+    "![Chain of assumptions in ML](img/Chain of assumptions in ML.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
