--- a/ML Strategy (1).ipynb
+++ b/ML Strategy (1).ipynb
@@ -41,6 +41,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3. 设立目标\n",
+    "\n",
+    "### 3.1 单一的数字度量\n",
+    "\n",
+    "设立唯一的实数度量，来衡量模型对当前的问题的表现好坏。比如在非均衡分类问题中，有精度和召回率等多种度量指标，通常会将其合并为一个F1-score的度量，否则无法挑选模型。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -51,6 +64,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
