Satisficing and Optimizing metric

--- a/ML Strategy (1).ipynb
+++ b/ML Strategy (1).ipynb
@@ -50,7 +50,15 @@
     "\n",
     "### 3.1 单一的数字度量\n",
     "\n",
-    "设立唯一的实数度量，来衡量模型对当前的问题的表现好坏。比如在非均衡分类问题中，有精度和召回率等多种度量指标，通常会将其合并为一个F1-score的度量，否则无法挑选模型。"
+    "设立唯一的实数度量，来衡量模型对当前的问题的表现好坏。比如在非均衡分类问题中，有精度和召回率等多种度量指标，通常会将其合并为一个F1-score的度量，否则无法挑选模型。\n",
+    "\n",
+    "### 3.2 优化度量和满意度量\n",
+    "\n",
+    "评价一个模型，除去优化的度量指标之外，通常我们还会关心一些现实世界的指标（来自产品、运营方面的要求），而非模型理论层面的优化目标。比如模型训练所需要的时间，比如训练分类器时可能想考虑过去24小时内FN出现的次数（这个是无法通过模型优化的）。\n",
+    "\n",
+    "这些现实世界的指标，很难和优化度量一起合并为一个单一的数字度量。比如优化度量是准确率，不能说设立一个成本，等于准确率-0.5×训练时间，这种做法是不显示的。\n",
+    "\n",
+    "实际的做法，通常是将现实世界的指标，作为一个满意度量，设立目标范围。在通过各个满意度量满足的前提下，比较优化度量。这样对于模型，可以有N个度量值，其中一个是优化度量，剩下的是带有约束调节的满意度量。"
    ]
   },
   {
