Why human-level performance

--- a/ML Strategy (1).ipynb
+++ b/ML Strategy (1).ipynb
@@ -89,6 +89,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 4. 对比人类的水准\n",
+    "\n",
+    "### 4.1 为什么要参考人类水准\n",
+    "\n",
+    "如今机器学习算法已经可以在很多问题上达到人类的水平。同时，很多问题上，由于人所能达到的水准已经接近完美了，所以很多情况下机器学习算法都在力图达到人类可以达到的水平。\n",
+    "\n",
+    "![Why human-level performance](img/Why human-level performance.png)\n",
+    "\n",
+    "就具体问题而言，一旦机器学习发展到超越人类水平之后，进展就迅速减缓了。一方面是因为人类水准常常已经非常接近**贝叶斯最优误差 Bayes optimal error**，尤其是针对图像、声音、语言这些问题。贝叶斯最优误差定义为可能达到的最优误差，换言之，它是从X到Y的最优函数映射，这个映射的准确率无法被超越。\n",
+    "\n",
+    "另一方面的原因是，在超越人类水平后，很多之前可以用来提升算法的工具都不再能用上。比如：\n",
+    "    - 获取人类打标好的数据\n",
+    "    - 进行人工错误分析，得知为什么人们会犯错\n",
+    "    - 更好地分析偏差和方差"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
