Improving your model performance

--- a/ML Strategy (1).ipynb
+++ b/ML Strategy (1).ipynb
@@ -146,6 +146,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5 提升模型表现\n",
+    "\n",
+    "![Improving your model performance](img/Improving your model performance.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
