Build your first system quickly, then iterate

--- a/ML Strategy (2).ipynb
+++ b/ML Strategy (2).ipynb
@@ -38,6 +38,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.3 快速搭建第一个模型，然后迭代\n",
+    "\n",
+    "设立开发集、训练集，确定度量指标，然后快速搭建初始模型。之后再通过偏差/方差分析，错误分析，决定接下来步骤的优先级。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -48,6 +59,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
