Bias and Variance with mismatched data distributions

--- a/ML Strategy (2).ipynb
+++ b/ML Strategy (2).ipynb
@@ -60,6 +60,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 来自不同分布数据的偏差方差分析\n",
+    "\n",
+    "当训练集的分布和开发集/测试集不同时，偏差/方差分析也会有细微的差异。\n",
+    "\n",
+    "之前我们认为训练集误差和开发集误差之间的差异，属于方差，是模型泛化能力不足导致的。当开发集和训练集来自不同的分布时，它们误差的差异，还有可能是不同的数据分布导致的。为了应对这个问题，我们需要将训练集再细分，划出一小部分，作为训练开发集。训练开发集来自和训练集同样的分布，但它不用于训练模型。这样，我们认为，训练集和训练开发集之间的差异是方差，而训练开发集和开发集之间的差异是数据不匹配。\n",
+    "\n",
+    "![Bias variance on mismatched training and dev test sets](img/Bias variance on mismatched training and dev test sets.png)\n",
+    "\n",
+    "![More general formulation](img/More general formulation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
