--- a/ML Strategy (2).ipynb
+++ b/ML Strategy (2).ipynb
@@ -89,6 +89,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3. 从多个任务进行学习\n",
+    "\n",
+    "### 3.1 迁移学习\n",
+    "\n",
+    "将针对A任务已经训练好的神经网络的输出层 $\\hat{y}$（也即第L层），替换为B任务的输出，并重新训练这一层的权重。这种情况称为迁移学习。有时也会在去除A任务的输出层之后，增加多层，并重新训练权重。\n",
+    "\n",
+    "![Transfer learning](img/Transfer learning.png)\n",
+    "\n",
+    "迁移学习能发挥作用的前置条件：\n",
+    "    - A任务和B任务拥有同样的输入\n",
+    "    - A任务的数据量远多于B任务\n",
+    "    - A任务的底层特征可能会对B问题有用\n",
+    "\n",
+    "![When transfer learning makes sense](img/When transfer learning makes sense.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
