Multi-task learning

--- a/ML Strategy (2).ipynb
+++ b/ML Strategy (2).ipynb
@@ -111,6 +111,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 3.2 多任务学习\n",
+    "\n",
+    "在迁移学习中，两个任务的训练是串行的，将拥有较大数据量的任务训练好之后，再迁移到较小数据量的任务。而多任务学习针对的是多个任务同时并行训练的情况。\n",
+    "\n",
+    "以自动驾驶为例，在同一张图片中，自动驾驶系统需要同时检测图片中是否包含行人、车辆、停车标记（stop sign），红绿灯。可以针对这四个问题训练四个单独的神经网络，也可以训练一个。如果有足够的资源训练一个更大的神经网络，那个神经网络的表现通常会好于四个单独的神经网络。\n",
+    "\n",
+    "多任务学习，每个样本的某些标签没有标记也可以。只要在计算损失函数的时候，不计入无标签的数据即可。\n",
+    "\n",
+    "![Simplified autonomous driving example](img/Simplified autonomous driving example.png)\n",
+    "\n",
+    "多任务学习能发挥作用的前置条件：\n",
+    "    - 训练的多个任务可以收益于共享的底层特征\n",
+    "    - 通常多个任务的数据量是类似的\n",
+    "    - 有足够的资源来训练足够大的神经网络\n",
+    "\n",
+    "![When multi-task learning makes sense](img/When multi-task learning makes sense.png)\n",
+    "\n",
+    "在实际项目中，迁移学习的使用比多任务学习要多。多任务学习的前置条件一般很难满足，计算机视觉中的物体检测是少有的特例。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
