What is end-to-end deep learning

--- a/ML Strategy (2).ipynb
+++ b/ML Strategy (2).ipynb
@@ -137,6 +137,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 4. 端到端的深度学习\n",
+    "\n",
+    "### 4.1 什么是端到端的深度学习\n",
+    "\n",
+    "将一个学习系统的多个阶段组成的管道，简化为单一的神经网络，称为端到端的深度学习。\n",
+    "\n",
+    "一个例子：语音识别这个问题，传统的方法针对小数据集，需要进行语音->抽取特征->识别音位->识别单词->输出整句文本这一套流程。而当数据集非常大之后，采用端到端的模型，直接训练由语音到文本的神经网络，效果会非常好。\n",
+    "\n",
+    "![What is end-to-end learning](img/What is end-to-end learning.png)\n",
+    "\n",
+    "端到端的深度学习，也不一定适用于所有问题。比如目前人脸识别的最佳实践，是将整个流程切分为两个步骤，先用物体识别算法识别脸部，之后再进行人脸匹配。究其原因，主要有两点：1. 分解后的两个子模型，各自解决的问题更加简单。2. 对两个子模型而言，各自可以获得的数据量都要大得多。所以，从推测的结论上说，如果可以获得非常大的端到端人脸识别的数据，可能端到端的模型会更好。\n",
+    "\n",
+    "![Face recognition](img/Face recognition.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
