Whether to use end-to-end learning

--- a/ML Strategy (2).ipynb
+++ b/ML Strategy (2).ipynb
@@ -154,7 +154,19 @@
     "\n",
     "端到端的深度学习，也不一定适用于所有问题。比如目前人脸识别的最佳实践，是将整个流程切分为两个步骤，先用物体识别算法识别脸部，之后再进行人脸匹配。究其原因，主要有两点：1. 分解后的两个子模型，各自解决的问题更加简单。2. 对两个子模型而言，各自可以获得的数据量都要大得多。所以，从推测的结论上说，如果可以获得非常大的端到端人脸识别的数据，可能端到端的模型会更好。\n",
     "\n",
-    "![Face recognition](img/Face recognition.png)"
+    "![Face recognition](img/Face recognition.png)\n",
+    "\n",
+    "### 4.2 是否要使用端到端的深度学习\n",
+    "\n",
+    "在使用端到端的深度学习之前，最重要的问题是：你是否拥有足够的数据，来学得一个足够描述X到Y映射复杂度的函数。\n",
+    "\n",
+    "端到端深度学习的优势：\n",
+    "    - 让数据说话：纯机器学习策略，神经网络可以学得X到Y的映射。这个模型足够找到数据中的统计信息，而不是用来反应人的认知。\n",
+    "    - 需要更少的人工设计特征：简化工作流\n",
+    "\n",
+    "端到端深度学习的劣势：\n",
+    "    - 需要超大的打标数据集：由于对数据量要求巨大，无法用于所有问题\n",
+    "    - 排除掉了某些潜在有效的人工设计特征：数据和人工设计的特征，是学习算法的两大知识来源。如果数据集很小，那么人工设计的特征可以给算法提供很多知识。"
    ]
   },
   {
