--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -25,6 +25,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 1.2 边缘检测实例\n",
+    "\n",
+    "在之前介绍的人类识别神经网络中，我们发现最终训练完成的神经网络会首先形成边缘检测的底层特征，在此基础上继续构建五官检测，进而再到人脸检测。可以说边缘检测是非常基础性的步骤。\n",
+    "\n",
+    "![Computer Vision Problem.png](img/Computer Vision Problem.png)\n",
+    "\n",
+    "卷积操作可以有效地进行边缘检测。\n",
+    "\n",
+    "![Vertical edge detection.png](img/Vertical edge detection.png)\n",
+    "\n",
+    "卷积操作会使图片的分辨率降低（从图上的6×6变成4×4），检测出来的边缘也会看起来比较粗。但当输入图片的分辨率非常高时，这点损耗可以忽略不计。\n",
+    "\n",
+    "![Vertical edge detection 2.png](img/Vertical edge detection 2.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -35,6 +56,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
