--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -36,13 +36,34 @@
     "\n",
     "![Computer Vision Problem.png](img/Computer Vision Problem.png)\n",
     "\n",
-    "卷积操作可以有效地进行边缘检测。\n",
+    "卷积操作可以有效地进行边缘检测。卷积计算用到的这个3×3的矩阵，称为**过滤器 filter**，有些文献中也称为**核 kernel**。\n",
     "\n",
     "![Vertical edge detection.png](img/Vertical edge detection.png)\n",
     "\n",
     "卷积操作会使图片的分辨率降低（从图上的6×6变成4×4），检测出来的边缘也会看起来比较粗。但当输入图片的分辨率非常高时，这点损耗可以忽略不计。\n",
     "\n",
     "![Vertical edge detection 2.png](img/Vertical edge detection 2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.3 更多边缘检测的内容\n",
+    "\n",
+    "上面提到的过滤器，还可以区分由浅到深的边缘和由深到浅的边缘。\n",
+    "\n",
+    "![Vertical edge detection examples.png](img/Vertical edge detection examples.png)\n",
+    "\n",
+    "而将这个过滤器的矩阵转置，就是水平边缘检测的过滤器。\n",
+    "\n",
+    "![Vertical and Horizontal Edge Detection.png](img/Vertical and Horizontal Edge Detection.png)\n",
+    "\n",
+    "除去水平边缘和垂直边缘过滤器外，计算机视觉社区还发明过Sober过滤器和Scharr过滤器，它们分别有一些自己的特性。而在深度学习时代，一个非常重要的理念是，过滤器本身可以作为神经网络的参数，在反向传播的过程中进行学习。这样最终学得的边缘检测过滤器，可能不限于水平或垂直边缘，而是可以检测任意倾斜的边缘。\n",
+    "\n",
+    "![Learning to detect edges.png](img/Learning to detect edges.png)"
    ]
   },
   {
