--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "![Vertical edge detection.png](img/Vertical edge detection.png)\n",
     "\n",
-    "卷积操作会使图片的分辨率降低（从图上的6×6变成4×4），检测出来的边缘也会看起来比较粗。但当输入图片的分辨率非常高时，这点损耗可以忽略不计。\n",
+    "卷积操作检测出来的边缘看起来比较粗，当输入图片的分辨率非常高时，这点损耗可以忽略不计。\n",
     "\n",
     "![Vertical edge detection 2.png](img/Vertical edge detection 2.png)"
    ]
@@ -64,6 +64,21 @@
     "除去水平边缘和垂直边缘过滤器外，计算机视觉社区还发明过Sober过滤器和Scharr过滤器，它们分别有一些自己的特性。而在深度学习时代，一个非常重要的理念是，过滤器本身可以作为神经网络的参数，在反向传播的过程中进行学习。这样最终学得的边缘检测过滤器，可能不限于水平或垂直边缘，而是可以检测任意倾斜的边缘。\n",
     "\n",
     "![Learning to detect edges.png](img/Learning to detect edges.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 补全\n",
+    "\n",
+    "经过卷积操作，图片的分辨率会降低。如果原图是n×n的矩阵，而过滤器是f×f的矩阵，卷积之后的矩阵就变为了(n-f+1)×(n-f+1)维。这样有两个坏处：1）随着每一层神经网络的卷积计算，图片的大小都在不断缩小，限制了训练过大的神经网络；2）角和边上的像素点，参与卷积计算的次数会更少，从而造成边角的信息利用率低。所以实际使用中，卷积通常伴随着补全。\n",
+    "\n",
+    "![Padding.png](img/Padding.png)\n",
+    "\n",
+    "根据使用补全的策略，区分**正确卷积 Valid convolution**和**同一卷积 Same convolution**。所谓正确卷积，就是不包含补全，任由图片大小缩减；而同一卷积，是先进行补全，使得最终输出的图片大小和输入一致。注意要同一卷积的要求，使得 $p=\\frac{f-1}{2}$。这就要求过滤器是一个奇数维的矩阵，否则补全就需要是非对称的。过滤器是奇数维矩阵的另一个好处，是过滤器存在一个中心像素，方便定位位置。\n",
+    "\n",
+    "![Valid and Same convolutions.png](img/Valid and Same convolutions.png)"
    ]
   },
   {
