Convolutions over Volumes

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -101,6 +101,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 高维空间的卷积\n",
+    "\n",
+    "对于图片，如果要处理RGB值，就会有三个n×n的矩阵，形成一个n×n×3的立方体，这时相应的，过滤器也变成了一个f×f×3的立方体，最终输出仍然是一个矩阵。\n",
+    "\n",
+    "![Convolutions on RGB image.png](img/Convolutions on RGB image.png)\n",
+    "\n",
+    "在需要的情况下，也可以同时使用多个过滤器。\n",
+    "\n",
+    "![Multiple filters.png](img/Multiple filters.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
