One Layer of a Convolutional Network

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -116,6 +116,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.7 一层卷积神经网络\n",
+    "\n",
+    "![Example of a layer.png](img/Example of a layer.png)\n",
+    "\n",
+    "![Summary of notation.png](img/Summary of notation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
