A simple convolution network example

--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -129,6 +129,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.8 简单的卷积神经网络示例\n",
+    "\n",
+    "一个39×39像素，RGB三通道表示的图片，经过三个卷积层，最后叠加一层logistic或softmax的卷机神经网络分类模型。注意到随着层数的增加，图片的像素在下降，而通道数在上升，这也是超参选择（每一层的过滤器大小f，过滤器数量$n_c$，步长s，补全p）的一个普遍趋势。\n",
+    "\n",
+    "![Example ConvNet.png](img/Example ConvNet.png)\n",
+    "\n",
+    "实际上，一个典型的卷积神经网络，除去卷积层之外，还会包含池化层(Pooling)，完全连接层(Fully connected)。下面会详细介绍。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
