--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -144,6 +144,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.9 池化层\n",
+    "\n",
+    "在过滤器区间内，取最大值，称为最大池化层。\n",
+    "\n",
+    "![Pooling layer Max pooling.png](img/Pooling layer Max pooling.png)\n",
+    "\n",
+    "池化层和卷积层的一个显著不同，是池化层的过滤器是针对通道独立的，不会跨通道取最大值。过滤器也包含两个超参，分别是f过滤器大小和步长s。注意和卷积层的另一个不同，是池化层的过滤器，只有超参，没有参数。所以在反向传播的过程中，这一层是没有更新的。\n",
+    "\n",
+    "![Pooling layer Max pooling 2.png](img/Pooling layer Max pooling 2.png)\n",
+    "\n",
+    "同时也有平均池化层，但平均池化层不常用。\n",
+    "\n",
+    "![Pooling layer Average pooling.png](img/Pooling layer Average pooling.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
