--- a/Foundations of Convolutional Neural Networks.ipynb
+++ b/Foundations of Convolutional Neural Networks.ipynb
@@ -165,6 +165,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.10 卷积神经网络实例\n",
+    "\n",
+    "上面说到，池化层是没有需要学习的参数的，而且池化层通常会跟在一层或多层卷积层之后，所以习惯上会将卷积层和池化层一起称为神经网络的一层。而所谓的完全连接层FC，就是普通的神经网络的一层，有权重和截距作为参数。\n",
+    "\n",
+    "下图是一个卷积-池化-卷积-池化-全连接-全连接-全连接-Softmax的卷积神经网络的例子。设计良好的卷积神经网络架构，每一层激活值的数量在前向传播的过程中，通常是逐渐递减的。\n",
+    "\n",
+    "![Convolution Neural Network Example.png](img/Convolution Neural Network Example.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
