Network in Network and 1×1 convolutions

--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -90,6 +90,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5 网络中的网络，1×1卷积\n",
+    "\n",
+    "1×1的卷积在单一通道下看似乎没什么用，但是当通道数多了之后，1×1的卷积实际上可以对跨通道之间的数据项进行非线性组合。\n",
+    "![Why does a 1×1 convolution do.png](img/Why does a 1×1 convolution do.png)\n",
+    "\n",
+    "1×1的卷积还可以对通道数进行缩减（就像池化层对高度和宽度进行缩减），当然如果愿意的化，1×1卷积也可以增加通道数。\n",
+    "![Using 1×1 convolutions.png](img/Using 1×1 convolutions.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
