Inception network motivation

--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -103,6 +103,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 Inception网络的设想\n",
+    "\n",
+    "避免考虑要用1×1的卷积，还是3×3的卷积，还是池化层。直接将所有这些，叠加到同一层网络中，让模型自己去学习参数。\n",
+    "\n",
+    "![Motivation for inception network.png](img/Motivation for inception network.png)\n",
+    "\n",
+    "5×5的卷积，可能会引入比较大的计算量。这时，使用1×1的卷积，在中间做一层瓶颈层，可以有效地降低计算量。\n",
+    "\n",
+    "![The problem of computational cost.png](img/The problem of computational cost.png)\n",
+    "\n",
+    "![Using 1×1 convolution.png](img/Using 1×1 convolution.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
