--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -120,6 +120,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.7 Inception网络\n",
+    "\n",
+    "Inception模块使用到了上面的组件，对于3×3和5×5这样的卷积层，会在之前加入一层1×1的卷积作为瓶颈层，减少计算；而对于池化层，除去同一补全之外，还会在之后增加一层1×1的卷积层，用来缩减通道数量。\n",
+    "\n",
+    "![Inception module.png](img/Inception module.png)\n",
+    "\n",
+    "Inception网络是由多个Inception模块组合而成的。\n",
+    "![Inception network.png](img/Inception network.png)\n",
+    "\n",
+    "一个小彩蛋，Inception的概念，其实就来自盗梦空间。\n",
+    "![WE NEED TO GO DEEPER.png](img/WE NEED TO GO DEEPER.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
