state of computer vision

--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -184,6 +184,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 2.4 计算机视觉领域的现状\n",
+    "\n",
+    "相比问题的复杂度，打标数据少，手动设计的特征工程多，在神经网络的架构设计上比较讲究。\n",
+    "\n",
+    "![Data vs hand-engineering.png](img/Data vs hand-engineering.png)\n",
+    "\n",
+    "模型融合（Ensembling）和Multi-crop是两个在比赛中提升成绩的好办法，但生产环境中使用的很少。\n",
+    "\n",
+    "![Tips for doing well on benchmarks or winning competitions.png](img/Tips for doing well on benchmarks or winning competitions.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
