Sliding Windows Object Detection

--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -32,11 +32,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. 特征点检测 Landmark detection\n",
+    "## 2. 特征点检测 Landmark Detection\n",
     "\n",
     "类似上面带目标定位的神经网络分类器，也可以让神经网络最终的输出层直接输出**特征点 Landmark**的坐标。但特征点的数量需要预先定义。并且每个特征点在输入向量中的位置（比如左眼内侧眼角，下巴，膝盖），需要跨样本保持一致。\n",
     "\n",
     "![Landmark detection.png](img/Landmark detection.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3. 滑动窗口目标检测 Sliding Windows Object Detection\n",
+    "\n",
+    "使用滑动窗口目标检测算法，需要首先训练一个分类器。以汽车检测为例，这个分类器要求输入 $X$ 在正样本的情况下，图片的大小几乎只包含汽车。分类器本身，可以是神经网络，也可以不是。\n",
+    "\n",
+    "![Car detection example.png](img/Car detection example.png)\n",
+    "\n",
+    "滑动窗口目标检测的算法，先挑选一个较小的滑动窗口，配以一个最好较小的步长，在新的训练集图片中进行滑动，并将滑窗里截取的图片作为输入，用到上面训练好的分类器中。一个循环结束后，再放大滑动窗口的大小，继续之前的步骤。\n",
+    "\n",
+    "滑动窗口的一个问题是计算成本较大，增加步长可以降低计算成本，但会损失精度。在神经网络兴起之前，滑动窗口目标检测，通常配合着人工特征以及简单线性分类器，计算量较小。而在深度学习时代，简单地用滑动窗口配合卷积神经网络，即使以当前的计算能力，还是非常地慢。\n",
+    "\n",
+    "![Sliding windows detection.png](img/Sliding windows detection.png)\n",
+    "\n",
+    "下一节，我们会介绍用卷积来实现滑动窗口，从而将计算量降低到可以接受的范围。"
    ]
   },
   {
