--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -61,6 +61,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 4. 滑动窗口的卷积实现\n",
+    "\n",
+    "在介绍滑动窗口的卷积实现之前，我们先介绍一个概念，全连接（FC）层，是可以等价地用卷积层来表达的，如下图所示：\n",
+    "\n",
+    "![Turning FC layer into convolutional layers.png](img/Turning FC layer into convolutional layers.png)\n",
+    "\n",
+    "假设我们已经训练好了一个接受14×14×3的图片的卷积神经网络分类器。那么，针对更大的训练样本，我们只需要复制卷积神经网络的架构，就可以同步对多个滑动窗口的结果进行分类。\n",
+    "\n",
+    "![Convolution implementation of sliding windows.png](img/Convolution implementation of sliding windows.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
