Bounding Box Prediction

--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -15,15 +15,15 @@
     "\n",
     "目标检测是这几年随着深度学习兴起以来，计算机视觉领域中进展神速的一个问题。要进行目标检测，目标定位是第一步。\n",
     "\n",
-    "目标定位就是在一个图像中，找到目标，用一个红框将其标出，目标定位通常和分类器配合使用，只涉及一个目标。而目标检测则在此基础上，进行多个目标的标记。\n",
+    "目标定位就是在一个图像中，找到目标，用一个包围盒将其标出，目标定位通常和分类器配合使用，只涉及一个目标。而目标检测则在此基础上，进行多个目标的标记。\n",
     "\n",
     "![What are localization and detection.png](img/What are localization and detection.png)\n",
     "\n",
-    "带目标定位的神经网络分类器，就是在卷积神经网络分类器的基础上，在最后的Softmax层，加入红框的坐标信息。这里记做 $b_x, b_y, b_h, b_w$，分别表示红框中心的横坐标，红框中心的纵坐标，红框的高度和红框的宽度。\n",
+    "带目标定位的神经网络分类器，就是在卷积神经网络分类器的基础上，在最后的Softmax层，加入红框的坐标信息。这里记做 $b_x, b_y, b_h, b_w$，分别表示包围盒中心的横坐标，包围盒中心的纵坐标，包围盒的高度和包围盒的宽度。\n",
     "\n",
     "![Classification with localization.png](img/Classification with localization.png)\n",
     "\n",
-    "最终输出的预测值 $\\hat{y}$，包括三个部分：$p_c$ 图像中是否包含目标，$b_x, b_y, b_h, b_w$ 红框坐标信息，以及 $c_1, c_2, c_3$ 分类器分类信息。当图像中不包含目标时，红框坐标信息和分类信息实际上是我们不关心的，所以损失函数也会相应地调整，在 $y=0$ 时，只计算 $p_c$ 的误差。下面的损失函数以误差平方为例，考虑到是否包含目标以及分类信息都属于分类问题，这两部分的损失也可以用logloss来计算。\n",
+    "最终输出的预测值 $\\hat{y}$，包括三个部分：$p_c$ 图像中是否包含目标，$b_x, b_y, b_h, b_w$ 包围盒坐标信息，以及 $c_1, c_2, c_3$ 分类器分类信息。当图像中不包含目标时，包围盒坐标信息和分类信息实际上是我们不关心的，所以损失函数也会相应地调整，在 $y=0$ 时，只计算 $p_c$ 的误差。下面的损失函数以误差平方为例，考虑到是否包含目标以及分类信息都属于分类问题，这两部分的损失也可以用logloss来计算。\n",
     "\n",
     "![Defining the target label y.png](img/Defining the target label y.png)"
    ]
@@ -66,7 +66,7 @@
     "collapsed": true
    },
    "source": [
-    "## 4. 滑动窗口的卷积实现\n",
+    "## 4. 滑动窗口的卷积实现 Convolutional Implementation of Sliding Windows\n",
     "\n",
     "在介绍滑动窗口的卷积实现之前，我们先介绍一个概念，全连接（FC）层，是可以等价地用卷积层来表达的，如下图所示：\n",
     "\n",
@@ -75,6 +75,19 @@
     "假设我们已经训练好了一个接受14×14×3的图片的卷积神经网络分类器。那么，针对更大的训练样本，我们只需要复制卷积神经网络的架构，就可以同步对多个滑动窗口的结果进行分类。\n",
     "\n",
     "![Convolution implementation of sliding windows.png](img/Convolution implementation of sliding windows.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 5. 预测包围盒 Bounding Box Prediction\n",
+    "\n",
+    "![YOLO algorithm.png](img/YOLO algorithm.png)\n",
+    "\n",
+    "![Specify the bounding boxes.png](img/Specify the bounding boxes.png)"
    ]
   },
   {
