Intersection Over Union

--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -91,6 +91,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 6. 交并集 Intersection Over Union\n",
+    "\n",
+    "![Evaluating object localization.png](img/Evaluating object localization.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
