--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -85,7 +85,15 @@
    "source": [
     "## 5. 预测包围盒 Bounding Box Prediction\n",
     "\n",
+    "上一节提到滑动窗口的卷积实现，计算上效率很高，但仍然有一个问题，它无法有效地确定包围盒。要使用不同尺寸的包围盒，需要训练多个不同的分类器。另外，实际训练样本的包围盒，其形状可能不是正方形，同时各个样本之间还存在差异。**YOLO(You Only Look Once)**算法，提供了更精确的包围盒预测算法。\n",
+    "\n",
+    "在YOLO算法中，每张图片被划分为若干个区域，图上是3×3，实际中一般更大（比如19×19）。每个目标，根据其中心点，只被分配到一个具体的区域中。每个区域的目标变量y等同于目标定位中的目标变量。这样神经网络会输出图像中每个区域的包围盒（如果有的话）的精确位置。一个区域中有多个目标的情况，我们之后会再谈到。\n",
+    "\n",
+    "YOLO算法是通过卷积实现的，因而效率非常高，经常用于实时的目标检测。\n",
+    "\n",
     "![YOLO algorithm.png](img/YOLO algorithm.png)\n",
+    "\n",
+    "注意包围盒参数的取值范围。按照图像问题的惯例，图像的左上角定义为坐标(0, 0)，而右下角定义为坐标(1, 1)，$b_x$ 和 $b_y$ 的值根据这个坐标系来确定，由于是中心点的坐标，因此这两个值都在(0, 1)的区间内。但是目标是可以跨区域的，因而 $b_h$ 和 $b_w$ 是可以大于1的。\n",
     "\n",
     "![Specify the bounding boxes.png](img/Specify the bounding boxes.png)"
    ]
@@ -97,6 +105,10 @@
    },
    "source": [
     "## 6. 交并集 Intersection Over Union\n",
+    "\n",
+    "交并集可以作为评价计算出包围盒好坏的一个指标。在下一节，也会作为一个组件，提升目标检测算法。\n",
+    "\n",
+    "计算机视觉领域惯例上在 $IoU \\ge 0.5$ 时，判断包围盒正确。0.5在这里是一个人为的规定，并没有理论原因，如果希望判定更为严格，也可以将这个阈值设为0.6。\n",
     "\n",
     "![Evaluating object localization.png](img/Evaluating object localization.png)"
    ]
