Non-Max Suppression

--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -114,6 +114,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 7. 非极大值抑制 Non-Max Suppression\n",
+    "\n",
+    "YOLO算法针对同一个目标，可能会有多个区域判定该目标在本区域内，从而对单个目标产生多个包围盒。\n",
+    "\n",
+    "![Non-max suppression example.png](img/Non-max suppression example.png)\n",
+    "\n",
+    "利用IoU，可以消除针对同一目标的多个包围盒。这里就是挑选概率最高的包围盒，然后如果 $IoU \\ge 0.5$，则认为是针对同一目标，直接消除。\n",
+    "\n",
+    "![Non-max suppression algorithm.png](img/Non-max suppression algorithm.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
