--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -131,6 +131,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Archor Box\n",
+    "\n",
+    "目前为止上面提到的目标识别算法，还无法针对同一区域包含多个目标的情况进行识别。引入Archor Box的概念，可以解决这个问题。\n",
+    "\n",
+    "![Overlapping objects.png](img/Overlapping objects.png)\n",
+    "\n",
+    "![Archor box algorithm.png](img/Archor box algorithm.png)\n",
+    "\n",
+    "![Archor box example.png](img/Archor box example.png)\n",
+    "\n",
+    "Archor Box无法很好地处理：\n",
+    "    - 预先定义了两个Archor Box，但是区域中有三个目标的情况\n",
+    "    - 两个目标的Archor Box形状非常类似的情况"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
