--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -163,6 +163,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Region Proposal\n",
+    "\n",
+    "通过传统的图像分割算法，分割出区域，针对具体的区域进行分类。\n",
+    "\n",
+    "![Region proposal R-CNN.png](img/Region proposal R-CNN.png)\n",
+    "\n",
+    "这个算法比较慢，社区内一直在致力于提升其运算效率。\n",
+    "\n",
+    "![Faster algorithms.png](img/Faster algorithms.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
