One-shot learning

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -28,6 +28,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 一次性学习 One Shot Learning\n",
+    "\n",
+    "对于人脸验证问题，每个人只有一张图片，由于样本量很小，很难训练出稳定的接受新图片，判断是否在图片库内的卷积神经网络模型。同时，由于图片库会更新，增加或减少样本时，需要修改Softmax层的神经元数量重新训练，也比较麻烦。\n",
+    "![One-shot learning.png](img/One-shot learning.png)\n",
+    "\n",
+    "取而代之，在人脸验证问题中，我们会用神经网络训练一个模型，接受两张图片作为参数，输出它们的相似度。\n",
+    "![Learning a similarity function.png](img/Learning a similarity function.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
