--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -41,6 +41,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 1.3 Siamese网络 Siamese Network\n",
+    "\n",
+    "计算人脸图片相似度常用的方法是Siamese网络。它运用神经网络，对一张图片输出一个特征向量。然后通过特征向量，比对不同图片的相似度。\n",
+    "\n",
+    "![Siamese Network.png](img/Siamese Network.png)\n",
+    "\n",
+    "![Goal of learning.png](img/Goal of learning.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
