--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -48,11 +48,32 @@
    "source": [
     "### 1.3 Siamese网络 Siamese Network\n",
     "\n",
-    "计算人脸图片相似度常用的方法是Siamese网络。它运用神经网络，对一张图片输出一个特征向量。然后通过特征向量，比对不同图片的相似度。\n",
+    "计算人脸图片相似度常用的方法是Siamese网络。它运用神经网络，对一张图片输出一个特征向量。然后通过比对不同图片的特征向量，比对不同图片的相似度。\n",
     "\n",
     "![Siamese Network.png](img/Siamese Network.png)\n",
     "\n",
     "![Goal of learning.png](img/Goal of learning.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Triplet Loss\n",
+    "\n",
+    "训练Siamese网络，损失函数规范地定义为Triplet Loss。它需要三个样本，Anchor锚点，Positive正类，Negative反类。其中Archor和Positive是同一个人，而Archor和Negative不是同一个人。我们需要Archor和正类的差异远小于Archor和反类的差异。\n",
+    "\n",
+    "这里 $\\alpha$ 叫做间隔，它作为超参存在。因为当 $\\alpha=0$ 时，算法可能会让 $f$ 始终输出0，也满足下面的不等式，但那不是我们想要的。\n",
+    "\n",
+    "![Learning Objective.png](img/Learning Objective.png)\n",
+    "\n",
+    "![Loss function.png](img/Loss function.png)\n",
+    "\n",
+    "训练样本需要包含同一个人的多张照片。而从训练样本中挑选 $A,P,N$ 也有一定的技巧。随机挑选后训练出来的算法可能效果不会特别好。\n",
+    "\n",
+    "![Choosing the triplets APN.png](img/Choosing the triplets APN.png)\n",
+    "\n",
+    "![Training set using triplet loss.png](img/Training set using triplet loss.png)"
    ]
   },
   {
