Face Verification and Binary Classification

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -77,6 +77,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5 人脸验证和二分类 Face Verification and Binary Classification\n",
+    "\n",
+    "相比使用Triplet Loss的方法，也可以直接训练一个逻辑回归。用卷积神经网络产出的特征向量作为输入，输出是否同一个人。\n",
+    "\n",
+    "![Learning the similarity function.png](img/Learning the similarity function.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
