What is neural style transfer

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -88,6 +88,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 神经风格迁移"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 什么是神经风格迁移\n",
+    "\n",
+    "![Neural style transfer.png](img/Neural style transfer.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
