what are deep convnets learning

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -104,6 +104,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 2.2 深度卷积网络在学什么\n",
+    "\n",
+    "![Visualizing what a deep network is learning.png](img/Visualizing what a deep network is learning.png)\n",
+    "\n",
+    "![Visualizing deep layers.png](img/Visualizing deep layers.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
