--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -117,6 +117,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 成本函数 Cost Function\n",
+    "\n",
+    "![Neural style transfer cost function.png](img/Neural style transfer cost function.png)\n",
+    "\n",
+    "![Find the generated  image G.png](img/Find the generated  image G.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
