content cost function

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -128,6 +128,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4 内容成本函数 Content Cost Function\n",
+    "\n",
+    "$l$ 的选择，通常位于中间，不太深也不太浅。\n",
+    "\n",
+    "![Content cost function.png](img/Content cost function.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
