style cost function

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -139,6 +139,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5 风格成本函数 Style Cost Function\n",
+    "\n",
+    "![Meaning of the style of an image.png](img/Meaning of the style of an image.png)\n",
+    "\n",
+    "![Intuition about style of an image.png](img/Intuition about style of an image.png)\n",
+    "\n",
+    "![Style matrix.png](img/Style matrix.png)\n",
+    "\n",
+    "![Style cost function.png](img/Style cost function.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
