1D and 3D generalization of the model

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -154,6 +154,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6 三维和一维的推广\n",
+    "\n",
+    "![Convolutions in 2D and 1D.png](img/Convolutions in 2D and 1D.png)\n",
+    "\n",
+    "![3D convolution.png](img/3D convolution.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
