--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -32,6 +32,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 3. 循环神经网络模型 Recurrent Neural Network Model\n",
+    "\n",
+    "使用标准神经网络模型来处理序列数据，主要会面临以下两个问题：1）序列数据的输入输出长度，对于不同的样本，可以是不同的；2）标准神经网络不会共享对序列数据的位置相关特征。\n",
+    "\n",
+    "![Why not a standard network.png](img/Why not a standard network.png)\n",
+    "\n",
+    "循环神经网络的模型：初始化 $a^{<0>}$ 为0向量，红色的参数共享，序列中每个单词的激活结果，作为下一个单词模型的输入之一。下图的左右描述是等价的。注意到这个RNN模型实际上是单向RNN，顺序在前的单词可以对顺序在后的单词施加影响，反之则不行，因而模型也就无法区分下面两个句子的不同。后面会说，经过一点简单的修改，也可以获得**双向RNN（Bidirected RNN）**\n",
+    "\n",
+    "![Recurrent Neural Networks.png](img/Recurrent Neural Networks.png)\n",
+    "\n",
+    "RNN的前向传播过程：\n",
+    "\n",
+    "![Forward Propagation.png](img/Forward Propagation.png)\n",
+    "\n",
+    "部分参数可以合并，从而简化计算：\n",
+    "\n",
+    "![Simplified RNN notation.png](img/Simplified RNN notation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
