Different types of RNNs

--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -60,9 +60,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. 通过时间的反向传播\n",
+    "## 4. 通过时间的反向传播 Backpropagation through time\n",
     "\n",
     "![Backpropagation through time.png](img/Backpropagation through time.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. 不同类型的循环神经网络 Different types of RNNs\n",
+    "\n",
+    "上面提到的循环神经网络，都属于 $T_x = T_y$ 的多对多的循环神经网络，适用于命名实体识别问题。另外，也存在着其它不同类型的循环神经网络。\n",
+    "\n",
+    "比如对于情感分析问题，可以构造多对一的RNN，甚至一对一，输出可以是二分类，也可以是1星到5星的多分类；而对于音乐生产问题，则可以构造一对多的RNN，其中输入可能是音乐类型，输出是音乐的序列数据；对于机器翻译问题，可以构造另一种输入输出的长度不同的RNN。\n",
+    "\n",
+    "![Summary of RNN types.png](img/Summary of RNN types.png)"
    ]
   },
   {
