Language model and sequence generation

--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -79,6 +79,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 语言模型和序列生成 Language Model and sequence generation\n",
+    "\n",
+    "语言模型是自然语言处理的一个基础性而重要的任务，而RNN可以有效地进行语言模型建模。\n",
+    "\n",
+    "以语音识别为例，下面两个句子的读音是完全一致的，语言模型可以给出每个句子的概率，通过这个概率帮助语音识别系统判断应该输出哪个句子。语言模型也可以用来帮助机器翻译。\n",
+    "\n",
+    "![What is language modelling.png](img/What is language modelling.png)\n",
+    "\n",
+    "建立语言模型，首先需要有一个**语料库 corpus**作为训练集，所谓语料库就是特定语言的一大批句子。第二部是**Tokenize**，也就是建立词典，并将语料库中的单词转换为向量的过程。注意到一般词典中会包含两个特殊的词，< EOS >表示句子结束，而< UNK >表示未知的词。\n",
+    "\n",
+    "![Language modelling with an RNN.png](img/Language modelling with an RNN.png)\n",
+    "\n",
+    "RNN实现的语言模型，令 $x^{<t>}=y^{<t-1>}$。$\\hat{y}^{<1>}$ 输出的是第一个词的概率分布，是一个对字典中所有词的softmax回归。而 $\\hat{y}^{<2>}$ 输出的是给定第一个词时，第二个词取值的条件概率分布。以此类推。\n",
+    "\n",
+    "而上面提到的句子的概率，就是所有词概率的乘积，如右下角所示。\n",
+    "\n",
+    "![RNN model.png](img/RNN model.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
