Sampling novel sequences

--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -102,6 +102,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. 生成新序列 Sampling novel sequences\n",
+    "\n",
+    "有了训练完成的语言模型后，我们可以根据这个模型给定的多项分布以及后续的条件概率多项分布，来生成新的句子。如果词典中包含了 < EOS > 字符，则可以在生成该字符后中止句子。而对于 < UNK > 字符，如果不希望生成的句子里有未知字符，则拒绝该字符，继续生成即可。\n",
+    "\n",
+    "![Sampling a sequence from a trained RNN.png](img/Sampling a sequence from a trained RNN.png)\n",
+    "\n",
+    "上面介绍的语言模型，是单词级别的。也可以构造字符级别的语言模型。字符级别的语言模型，就不需要额外处理未知的单词了，但其计算量更大，对于生成长序列时表现也不够好，目前只有在少数情况下会使用字符级别的语言模型。\n",
+    "\n",
+    "![Character-level language model.png](img/Character-level language model.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
