Gated Recurrent Unit

--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -130,6 +130,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. GRU单元 Gated Recurrent Unit\n",
+    "\n",
+    "![RNN unit.png](img/RNN unit.png)\n",
+    "\n",
+    "![GRU simplified.png](img/GRU simplified.png)\n",
+    "\n",
+    "![Full GRU.png](img/Full GRU.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
