--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "## 8. 循环神经网络的梯度消失问题 Vanishing gradients with RNNs\n",
     "\n",
-    "下面列举了两个句子，根据主语的单复数（cat or cats），跟在一大段定语从句后面的be动词会需要不同（was or were）。而目前提到的RNN，处理这个**长依赖 long-range dependencies**的能力不强，究其原因，可以归结于梯度消失。RNN中每个单词，都相当于神经网络的一层。当RNN的网络非常深时，很难使得反向传播比较强地影响到最初几层。为了应对RNN的梯度消失问题，有一系列的解决方案。\n",
+    "下面列举了两个句子，根据主语的单复数（cat or cats），跟在一大段定语从句后面的be动词会需要不同（was or were）。而目前提到的RNN，处理这个**长依赖 long-range dependencies**的能力不强，究其原因，可以归结于梯度消失。RNN中每个单词，都相当于神经网络的一层。当RNN的网络非常深时，很难使得反向传播比较强地影响到最初几层。为了应对RNN的梯度消失问题，有一系列的解决方案。以GRU和LSTM为主要代表。\n",
     "\n",
     "RNN的梯度爆炸：只需要进行**梯度裁剪gradient cliping**即可，相对好解决。\n",
     "\n",
@@ -140,6 +140,17 @@
     "![GRU simplified.png](img/GRU simplified.png)\n",
     "\n",
     "![Full GRU.png](img/Full GRU.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. 长短期记忆单元 Long Short Term Memory\n",
+    "\n",
+    "LSTM是更复杂的模型，使用也更为广泛。GRU的计算量会小一些。\n",
+    "\n",
+    "![LSTM in pictures.png](img/LSTM in pictures.png)"
    ]
   },
   {
